@@ -1,2 +1,1 @@
 gwt.sdk=/home/klangner/bin/gwt
-yui.compressor.dir=\\Project\\icplayer\\tools\\yuicompressor-2.4.8.jar
