@@ -1,3 +1,4 @@
+2016-08-18 Fixed ant build scripts issues with paths for Ubuntu platform
 2016-08-18 Added fetching all libraries in 1 reuqest, addons xml loaded in 1 request
 2016-08-11 Added exchange URL to scheme-less URL in addon descriptor factory
 2016-08-09 Added new addon IFrame
